Fix spacing problems of the welcome page caused by Bootstrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,3 +12,13 @@
     display: none; 
 }
 
+.container.col-xxl-8.px-4.py-5, .row.flex-lg-row-reverse.align-items-center.g-5.py-5 {
+    padding-top: 10px !important;
+    padding-bottom: 0% !important;
+}
+
+footer.py-3.bg-info.fixed-bottom {
+    padding-top: 0% !important;
+    padding-bottom: 0% !important;
+}
+
